--- a/index.html
+++ b/index.html
@@ -10,25 +10,26 @@
 <body>
     <header>
         <nav>
-            <div class="logo">
-                <!-- <img src="images/logo.png" alt="Health Hub Connect Logo"> -->
-                <span><i class="fas fa-heartbeat"></i></span>
-                <span>Health Hub Connect</span>
-            </div>
-            <ul id="navLinks">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#healthTools">Health Tools</a></li>
-                <li><a href="#onlineDoctors">Online Doctors</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-         
-            <div class="search-container">
-               <input type="text" placeholder="Search...">
-               <button type="submit"><i class="fas fa-search"></i></button>
+              <div class="logo">
+                 <span><i class="fas fa-heartbeat"></i></span>
+                 <span>Tabibu-Hub Connect</span>
            </div>
-           <button class="menu-toggle" id="menuToggle">Menu</button>
+           <ul id="navLinks">
+                 <li><a href="#home">Home</a></li>
+                 <li><a href="#healthTools">Health Tools</a></li>
+                 <li><a href="#onlineDoctors">Online Doctors</a></li>
+                 <li><a href="#contact">Contact</a></li>
+           </ul>
+     <!----------------search-container --------------->
+           <div class="search-container">
+              <input type="text" placeholder="Search...">
+              <button type="submit"><i class="fas fa-search"></i></button>
+           </div>
+           <div class="menu-toggle" id="menuToggle">
+              <i class="fas fa-bars"></i>
+          </div>
         </nav>
-    </header>
+       </header> 
 
     <div class="main-container">
       <h2>Tabibu-Hub Connect</h2>
@@ -87,6 +88,8 @@
             <input type="text" id="name" name="name" required>
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required>
+            <label for="name">Doctors name:</label>
+            <input type="text" id="name" name="name" required>
             <label for="message">Message:</label>
             <textarea id="message" name="message" rows="4" required></textarea>
             <button type="submit">Send</button>
